--- a/src/pages/WelcomePage.css
+++ b/src/pages/WelcomePage.css
@@ -2,8 +2,15 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: #ffffff;
   overflow: hidden;
+  background: #ffffff;
+}
+
+.welcome__stage {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform-origin: center center;
 }
 
 .welcome__artwork {
